--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,7 +17,7 @@ defaults: &defaults
   show_staff_badge: true
   preview_sensitive_media: false
   noindex: false
-  flavour: 'glitch'
+  flavour: 'aether'
   skin: 'default'
   trends: true
   trends_as_landing_page: true
