--- a/.env.production.sample
+++ b/.env.production.sample
@@ -249,25 +249,28 @@ SMTP_FROM_ADDRESS=notifications@example.com
 # ---------------
 
 # Maximum allowed character count
-MAX_TOOT_CHARS=500
+MAX_TOOT_CHARS=100000
 
 # Maximum number of pinned posts
 MAX_PINNED_TOOTS=5
 
 # Maximum allowed bio characters
-MAX_BIO_CHARS=500
+MAX_BIO_CHARS=3000
 
 # Maximim number of profile fields allowed
-MAX_PROFILE_FIELDS=4
+MAX_PROFILE_FIELDS=15
 
 # Maximum allowed display name characters
-MAX_DISPLAY_NAME_CHARS=30
+MAX_DISPLAY_NAME_CHARS=100
 
 # Maximum allowed poll options
-MAX_POLL_OPTIONS=5
+MAX_POLL_OPTIONS=20
 
 # Maximum allowed poll option characters
-MAX_POLL_OPTION_CHARS=100
+MAX_POLL_OPTION_CHARS=300
+
+# Maximum number of emoji reactions per toot and user (minimum 1)
+MAX_REACTIONS=10
 
 # Maximum image and video/audio upload sizes
 # Units are in bytes
