--- a/config/settings.yml
+++ b/config/settings.yml
@@ -42,7 +42,7 @@ defaults: &defaults
   default_content_type: 'text/plain'
   show_domain_blocks: 'disabled'
   show_domain_blocks_rationale: 'disabled'
-  outgoing_sensitivity: false
+  outgoing_sensitive: false
   outgoing_spoilers: ''
   require_invite_text: false
   backups_retention_period: 7
